...
                                                            child: Container(
                                                              width: double
                                                                  .infinity,
                                                              child:
                                                                  TextFormField(
                                                                key: ValueKey(
                                                                    'Signup_EmailAddress_8t1u'),
                                                                controller: _model
                                                                    .signupEmailAddressTextController,
                                                                focusNode: _model
                                                                    .signupEmailAddressFocusNode,
                                                                onChanged: (_) =>
                                                                    EasyDebounce
...
                                                            alignment:
                                                                AlignmentDirectional(
                                                                    0.0, 0.0),
                                                            child:
                                                                TextFormField(
                                                              key: ValueKey(
                                                                  'Signup_Password_lleo'),
                                                              controller: _model
                                                                  .signupPasswordTextController,
                                                              focusNode: _model
                                                                  .signupPasswordFocusNode,
                                                              autofocus: false,
                                                              textInputAction:
...
                                                            alignment:
                                                                AlignmentDirectional(
                                                                    0.0, 0.0),
                                                            child:
                                                                TextFormField(
                                                              key: ValueKey(
                                                                  'Signup_ConfirmPassword_3xgi'),
                                                              controller: _model
                                                                  .signupConfirmPasswordTextController,
                                                              focusNode: _model
                                                                  .signupConfirmPasswordFocusNode,
                                                              autofocus: false,
                                                              textInputAction:
...
                                            borderRadius:
                                                BorderRadius.circular(24.0),
                                          ),
                                        ),
                                      if (_model.tabBarCurrentIndex == 0)
                                        FFButtonWidget(
                                          key: ValueKey('SignUp_Button_v8v4'),
                                          onPressed: () async {
                                            logFirebaseEvent(
                                                'LOGIN_SIGN_UP_PAGE_SignUp_Button_ON_TAP');
                                            logFirebaseEvent(
                                                'SignUp_Button_auth');
                                            GoRouter.of(context)
...
